--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@material-ui/icons": "^4.4.1",
     "@material-ui/pickers": "^3.2.6",
     "@material-ui/system": "^4.3.3",
+    "date-fns": "^2.2.1",
     "formik": "^1.5.8",
     "jss-rtl": "^0.2.3",
     "react": "^16.9.0",
@@ -25,7 +26,7 @@
   },
   "repository": {
     "type": "git",
-        "url": "https://github.com/arawash/reactenvformcolector.git"
+    "url": "https://github.com/arawash/reactenvformcolector.git"
   },
   "browserslist": {
     "production": [
